LayoutTest fast/dom/shadow/shadowroot-type.html is failing on Windows https://bugs.webkit.org/show_bug.cgi?id=101201

Reviewed by Hajime Morita.

When we use a bit field for enum, Windows compiler seems returning some wrong value.
We would like to avoid using a bit field for enum value.

* dom/ShadowRoot.cpp:
(WebCore::ShadowRoot::create):
* dom/ShadowRoot.h:
(WebCore::ShadowRoot::type):
(WebCore::ShadowRoot::setType):
(ShadowRoot):


Canonical link: https://commits.webkit.org/119366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133548 268f45cc-cd09-0410-ab3c-d52691b4dbfc